# gulp

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CHANGELOG_tmp.md  CONTRIBUTING.md  DATASHEET.md  Dockerfile  Dockerfile.alpine  Dockerignore  Doxyfile  GULP_DUAL_LICENSE.txt  LICENSE.GULP.txt  LICENSE.md  MANIFEST.in  Makefile  README.md  TODO.md  bootstrap.sh  build_lib.sh  checkout_branch.sh  cleanup_dirs.sh  clear_all.sh  docker-compose-dev.yml  docker-compose.yml  docker-entrypoint.sh  example_migrate_collab.py  gulp-paid-plugins  gulp.code-workspace  gulp_cfg_template.json  install_dev.md  install_docker.md  make_release_pyproject.py  migrate_stats.py  prometheus.yml  prometheus_alerts.yml  pyproject.docker.toml  (+7 more)
.devcontainer/: Dockerfile  devcontainer.json  devsetup.sh  docker-compose.yml  localhost-forward-services.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-ci.yml  python-package.yml
collab_migrate/: example_migrate_collab.py
collab_migrate/1.5.1/: migrate.py
collab_migrate/1.6.6/: migrate.py
collab_migrate/1.7.01/: migrate.py
collab_migrate/v1.7.400/: migrate.py
collab_migrate/v1.7.601/: migrate.py
docs/: Architecture.md  Creating Plugins.md  Gulp_dotnet_ui_alpha_docs.odt  Install Dev.md  Install Docker.md  Plugins.md  Testing Plugins.md  Troubleshooting.md  architecture.md  install_dev.md  install_docker.md  integration.md  observability.md  plugins_and_mapping.md  production_runbook.md  query.md  testing.md  troubleshooting.md  websocket_recovery.md
docs/grafana/: gulp-comprehensive-observability.json
docs/plugins/: ai_assistant.md  bridge_manager.md  csv.py.md  enrich_abuse.md  enrich_circl_hash.py.md  enrich_whois.py.md  json.py.md  otel_receiver.md  query_elasticsearch.md  regex.py.md  win_pe.py.md  zip.py.md
samples/chrome_history_sqlite_stacked/: History
samples/chrome_webdata_sqlite_stacked/: Web Data
samples/json/: generate_list.py  jsondict.json  jsonline.json  jsonlist.json  test_list.json
samples/lin_syslog/: syslog
samples/memprocfs/: ntfs_files.txt  timeline_little.txt  web.txt
samples/mftecmd/: sample_j.csv  sample_record.csv
samples/pcap/: 220614_ip_flags_google.pcapng
samples/sqlite/: chrome_webdata
samples/suricata/: eve.json
samples/teamviewer/: connections_incoming.txt
src/gulp/: __init__.py  __main__.py  config.py  defs.py  gulp.py  gulp_cfg_template.json  plugin.py  plugin_internal.py  plugin_params.py  process.py  structs.py  utils.py  workers.py
test_scripts/: cecho.sh  count_data_chunk.py  count_json.py  count_lines.py  count_strings.py  create_mutated_raw.py  csv_generator.py  csv_generator_base.csv  evtx_count.py  get_stats.sh  ingest.py  ingest_raw.py  log_into_devcontainer.sh  login.sh  logout.sh  metadata.json  query_external.py  reinit.sh  restart_gulp.py  run_tests.sh  set_extra_path.sh  start_splunk.sh  test_anomalies.json  test_collab.py  test_collab_obj.py  test_ingest.py  test_ingest.sh  test_raw.json  test_user.py  testbed.py  ws_client.py  xml_generator.py  xml_generator_base.xml
tests/: __init__.py  common.py  conftest.py  db.py  glyph.py  highlight.py  ingest.py  link.py  note.py  operation.py  queries.json  query.py  raw_chunk.json  smoke_test.sh  stored_query.py  story.py  test_collab.py  test_db.py  test_enrich.py  test_glyph.py  test_highlight.py  test_link.py  test_lite.sh  test_note.py  test_operation.py  test_storage.py  test_stored_query.py  test_story.py  test_suite.sh  test_tag_documents.py  test_user.py  test_user_group.py  test_utility.py  test_ws_client_data.py  user.py  user_group.py  utility.py
tests/api/: common.py  db.py  glyph.py  highlight.py  ingest.py  link.py  note.py  object_acl.py  operation.py  query.py  stored_query.py  story.py  user.py  user_group.py  utility.py
tests/e2e/: test_workflows.py
tests/enrich/: test_enrich_abuse.py  test_enrich_circl_hash.py  test_enrich_whois.py
tests/extension/: test_enrich_whois.py
tests/ingest/: raw_chunk.json  test_ingest.py
tests/integration/: _test_multi_instance_base.py  multi_instance_test.py  run_multi_instance_tests.sh  test_acl.py  test_auth.py  test_collab.py  test_db.py  test_enhance_doc_map.py  test_enrich.py  test_enrich_whois_raw.py  test_hot_path_concurrency.py  test_ingest.py  test_ingest_win_evtx.py  test_multi_instance_client_data.py  test_multi_instance_collab_broadcast.py  test_multi_instance_query_routing.py  test_multi_user_single_instance.py  test_observability.py  test_operations.py  test_plugins.py  test_queries.py  test_raw_plugin.py  test_shared_object_plugin.py  test_single_instance_client_data.py  test_single_instance_collab_broadcast.py  test_single_instance_query_routing.py  test_storage.py  test_stress.py  test_task_queue_lifecycle.py  test_users.py  test_ws_collab_notifications.py  test_ws_ingest_raw_disconnect.py  test_ws_ingest_worker_backpressure.py  test_ws_notifications_wait.py  test_ws_redis_ownership.py  test_ws_user_notifications.py
tests/outdated_tests/: link.py  stored_query.py  story.py  user_group.py
tests/query/: test_query_api.py  test_query_elasticsearch.py  test_query_export.py  test_query_external.py  test_query_external_elasticsearch.py  test_query_external_wazuh.py  test_query_sigma.py  test_query_sigma_new.py  test_tag_documents.py
tests/sigma/: match_all.yaml  match_combined.yaml  match_some_more.yaml  proc_creation_win_sc_create_service.yaml  splunk_sigma_1.yaml  splunk_sigma_2.yaml  win_filter_admins.yaml
tests/unit/: test_collab_api.py  test_ingest_compressed.py  test_main.py  test_multi_instance_routing.py  test_multipart_chunked_upload.py  test_observability_alerts.py  test_opensearch_rebase_by_query.py  test_pcap_plugin.py  test_postgres_collab_improvements.py  test_production_runbook.py  test_query_helpers.py  test_query_raw_sync.py  test_raw_plugin.py  test_win_evtx_plugin.py  (+4 more)
tests_old/: README.md  test_db.py  test_glyph.py  test_highlight.py  test_operation.py  test_tag_documents.py  test_user_group.py  test_utility.py  test_ws_client_data.py
(+276 files in other folders)
