[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/gulp/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[project]
name = "mentat-gulp"
dynamic= ["version"]
authors = [{ name = "Mentat", email = "info@mentat.is" }]
description = "gULP - (generic) Unified Log Processor."
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
gulp = "gulp.__main__:main"

[tool.setuptools]
include-package-data = true
packages = ["gulp"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

# Ensure pytest loads the asyncio plugin when available
addopts = "-p pytest_asyncio"
asyncio_mode = "auto"
minversion = "7.0"

# Match SDK pytest markers to avoid marker warnings
markers = [
	"integration: Integration tests (requires live Gulp server)",
	"e2e: End-to-end tests",
	"stress: Stress tests (long-running, resource-intensive tests with ingestion/query)",
]
