[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/gulp/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"


[project]
name = "mentat-gulp"
dynamic= ["version"]
authors = [{ name = "Mentat", email = "info@mentat.is" }]
description = "gULP - (generic) Unified Log Processor."
readme = "README.md"
license = {text = "AGPL-3.0 and GULP (see LICENSE.md file)"}
# some dependencies have not yet updated for python 3.14, so we need to limit the supported versions for now
requires-python = ">=3.12"
dependencies = [
    "aiobotocore",
    "aiofile",
    "aiofiles",
    "aiohappyeyeballs",
    "aiohttp",
    "aioitertools",
    "aiomultiprocess",
    "aioshutil",
    "aiosignal",
    "aiosmtplib",
    "annotated-types",
    "anyio",
    "art",
    "async-unzip",
    "asyncio-atexit",
    "asyncio-pool",
    "attrs",
    "Authlib",
    "botocore",
    "caio",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "colorama",
    "colorclass",
    "coloredlogs",
    "construct",
    "cryptography",
    "defusedxml",
    "deprecation",
    "distro",
    "dnspython",
    "docx2txt",
    "dotwiz",
    "easygui",
    "elastic-transport",
    "elasticsearch",
    "elementpath",
    "Events",
    "evtx",
    "fastapi",
    "frozenlist",
    "gitdb",
    "gulp-sdk",
    "GitPython",
    "greenlet",
    "h11",
    "httpcore",
    "httpx",
    "humanfriendly",
    "idna",
    "inflection",
    "iniconfig",
    "itsdangerous",
    "Jinja2",
    "jiter",
    "jmespath",
    "json5",
    "libpff-python",
    "llvmlite",
    "lxml",
    "MarkupSafe",
    "msoffcrypto-tool",
    "multidict",
    "muty-python",
    "ntplib",
    "numba",
    "numpy",
    "odfpy",
    "olefile",
    "oletools",
    "opensearch-py",
    "orjson",
    "packaging",
    "pandas",
    "pcodedmp",
    "pillow",
    "pluggy",
    "prettytable",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "propcache",
    "psutil",
    "psycopg",
    "psycopg-binary",
    "psycopg-pool",
    "pycparser",
    "pycryptodome",
    "pydantic",
    "pydantic_core",
    "pyheck",
    "pyparsing",
    "pypdf",
    "pySigma",
    "pySigma-backend-opensearch",
    "pytest",
    "pytest-asyncio",
    "pytest-ordering",
    "python-dateutil",
    "python-multipart",
    "python-pip",
    "python-pptx",
    "python-whois",
    "pytz",
    "PyYAML",
    "redis",
    "regex",
    "requests",
    "requests-toolbelt",
    "scipy",
    "setuptools",
    "sigma-cli",
    "six",
    "smmap",
    "sniffio",
    "SQLAlchemy",
    "sqlalchemy-dlock",
    "sqlalchemy-mixins",
    "SQLAlchemy-Utils",
    "starlette",
    "stumpy",
    "tenacity",
    "tiktoken",
    "tqdm",
    "types-aiobotocore",
    "types-aiobotocore-s3",
    "typing-inspection",
    "typing_extensions",
    "tzdata",
    "urllib3",
    "uvicorn",
    "wcwidth",
    "websockets",
    "wrapt",
    "xlsxwriter",
    "xmltodict",
    "xxhash",
    "yarl",
] 

[project.scripts]
gulp = "gulp.__main__:main"

[tool.setuptools]
include-package-data = true
license-files = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

# Ensure pytest loads the asyncio plugin when available
addopts = "-p pytest_asyncio"
asyncio_mode = "auto"
minversion = "7.0"

# Match SDK pytest markers to avoid marker warnings
markers = [
	"integration: Integration tests (requires live Gulp server)",
	"e2e: End-to-end tests",
	"stress: Stress tests (long-running, resource-intensive tests with ingestion/query)",
]
