[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/gulp/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"


[project]
name = "mentat-gulp"
dynamic= ["version"]
authors = [{ name = "Mentat", email = "info@mentat.is" }]
description = "gULP - (generic) Unified Log Processor."
readme = "README.md"
license = {text = "AGPL-3.0 and GULP (see LICENSE.md file)"}
# some dependencies have not yet updated for python 3.14, so we need to limit the supported versions for now
requires-python = ">=3.12"
dependencies = [
    "aiobotocore==3.6.0",
    "aiofile==3.9.0",
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aioitertools==0.13.0",
    "aiomultiprocess==0.9.1",
    "aioshutil==1.6",
    "aiosignal==1.4.0",
    "aiosmtplib==5.1.0",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "art==6.5",
    "async-unzip==0.5.5",
    "asyncio-atexit==1.0.1",
    "asyncio-pool==0.6.0",
    "attrs==26.1.0",
    "Authlib==1.7.2",
    "botocore==1.43.0",
    "caio==0.9.25",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "colorama==0.4.6",
    "colorclass==2.2.2",
    "coloredlogs==15.0.1",
    "construct==2.10.70",
    "cryptography==48.0.0",
    "defusedxml==0.7.1",
    "deprecation==2.1.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docx2txt==0.9",
    "dotwiz==0.4.0",
    "easygui==0.98.3",
    "elastic-transport==9.4.0",
    "elasticsearch==9.4.0",
    "elementpath==5.1.1",
    "Events==0.5",
    "evtx==0.11.0",
    "fastapi==0.136.1",
    "frozenlist==1.8.0",
    "gitdb==4.0.12",
    "gulp-sdk",
    "GitPython==3.1.50",
    "greenlet==3.5.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "humanfriendly==10.0",
    "idna==3.13",
    "inflection==0.5.1",
    "iniconfig==2.3.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "jiter==0.14.0",
    "jmespath==1.1.0",
    "json5==0.14.0",
    "libpff-python==20231205",
    "llvmlite==0.47.0",
    "lxml==6.1.0",
    "MarkupSafe==3.0.3",
    "msoffcrypto-tool==6.0.0",
    "multidict==6.7.1",
    "muty-python",
    "ntplib==0.4.0",
    "numba==0.65.1",
    "numpy==2.4.4",
    "odfpy==1.4.1",
    "olefile==0.47",
    "oletools==0.60.2",
    "opensearch-py==3.2.0",
    "orjson==3.11.9",
    "packaging==26.2",
    "pandas==3.0.2",
    "pcodedmp==1.2.6",
    "pillow==12.2.0",
    "pluggy==1.6.0",
    "prettytable==3.17.0",
    "prometheus-client==0.25.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "propcache==0.4.1",
    "psutil==7.2.2",
    "psycopg==3.3.4",
    "psycopg-binary==3.3.4",
    "psycopg-pool==3.3.1",
    "pycparser==3.0",
    "pycryptodome==3.23.0",
    "pydantic==2.13.4",
    "pydantic_core==2.46.4",
    "pyheck==0.1.5",
    "pyparsing==3.3.2",
    "pypdf==6.10.2",
    "pySigma==1.3.3",
    "pySigma-backend-opensearch==2.0.2",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-ordering==0.6",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.27",
    "python-pip==1.1.1",
    "python-pptx==1.0.2",
    "python-whois==0.9.6",
    "pytz==2026.2",
    "PyYAML==6.0.3",
    "redis==7.4.0",
    "regex==2026.4.4",
    "requests==2.33.1",
    "requests-toolbelt==1.0.0",
    "scipy==1.17.1",
    "setuptools==82.0.1",
    "sigma-cli==3.0.2",
    "six==1.17.0",
    "smmap==5.0.3",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.49",
    "sqlalchemy-dlock==0.8.1",
    "sqlalchemy-mixins==2.0.5",
    "SQLAlchemy-Utils==0.42.1",
    "starlette==0.52.1",
    "stumpy==1.14.1",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "tqdm==4.67.3",
    "types-aiobotocore==3.6.0",
    "types-aiobotocore-s3==3.6.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2026.2",
    "urllib3==2.6.3",
    "uvicorn==0.46.0",
    "wcwidth==0.7.0",
    "websockets==16.0",
    "wrapt==2.1.2",
    "xlsxwriter==3.2.9",
    "xmltodict==1.0.4",
    "xxhash==3.7.0",
    "yarl==1.23.0",
] 

[project.scripts]
gulp = "gulp.__main__:main"

[tool.setuptools]
include-package-data = true
license-files = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

# Ensure pytest loads the asyncio plugin when available
addopts = "-p pytest_asyncio"
asyncio_mode = "auto"
minversion = "7.0"

# Match SDK pytest markers to avoid marker warnings
markers = [
	"integration: Integration tests (requires live Gulp server)",
	"e2e: End-to-end tests",
	"stress: Stress tests (long-running, resource-intensive tests with ingestion/query)",
]
